force-app/main/default/objects/IFv2_ExchangeRate__c/IFv2_ExchangeRate__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to define the exchange rate between various currencies</description>
    <label>Currency Exchange Rate</label>
</CustomObject>