force-app/main/default/objects/IFv2_ExchangeRate__c/fields/CurrencyFrom__c.field-meta.xml
<CustomField>
    <fullName>CurrencyFrom__c</fullName>
    <label>Currency From</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>