force-app/main/default/objects/IFv2_ExchangeRate__c/fields/CurrencyTo__c.field-meta.xml
<CustomField>
    <fullName>CurrencyTo__c</fullName>
    <label>Currency To</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>