force-app/main/default/objects/IFv2_ExchangeRate__c/fields/ValidFrom__c.field-meta.xml
<CustomField>
    <fullName>ValidFrom__c</fullName>
    <label>Valid From</label>
    <required>true</required>
    <type>Date</type>
</CustomField>