force-app/main/default/objects/IFv2_ExchangeRate__c/fields/ValidTill__c.field-meta.xml
<CustomField>
    <fullName>ValidTill__c</fullName>
    <label>Valid Till</label>
    <type>Date</type>
</CustomField>